Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- =========================
+PARTE 1/2 — index.html
+Pegá esta parte primero
+========================= -->
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -225,7 +229,14 @@
       </article>
     </div>
   </div>
-</section><!-- 
+</section>
+
+<!-- =========================
+PARTE 2/2 abajo
+========================= --><!-- =========================
+PARTE 2/2 — index.html
+Pegá esta parte debajo
+========================= -->
 
 <section id="envios">
   <div class="wrap">
