--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-<!-- =========================
-PARTE 1/2 — index.html
-RESPONSIVE + OVERLAY + CARRUSEL AUTO + SWIPE (DEDO)
-Pegá esta parte primero
-========================= -->
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -21,6 +16,16 @@ Pegá esta parte primero
   <meta name="theme-color" content="#0f0f0f"/>
 
   <style>
+    /* =========================
+       TIPOGRAFÍA (LOCAL)
+       Poné el archivo "Regothic Medieval.ttf" en la MISMA carpeta que este index.html
+       ========================= */
+    @font-face{
+      font-family: "RegothicMedieval";
+      src: url("Regothic Medieval.ttf") format("truetype");
+      font-display: swap;
+    }
+
     :root{
       --text:#f3f3f3;
       --muted:#bdbdbd;
@@ -42,7 +47,7 @@ Pegá esta parte primero
       color:var(--text);
       line-height:1.5;
       overflow-x:hidden;
-      padding-bottom: 120px; /* para que WhatsApp no tape footer */
+      padding-bottom: 120px;
     }
     body::before{
       content:"";
@@ -182,14 +187,31 @@ Pegá esta parte primero
       background: var(--accent);
       box-shadow: 0 0 16px rgba(212,179,107,.55);
     }
-    h1{
-      font-size: clamp(2.1rem, 6.2vw, 3.6rem);
-      line-height:1.04;
-      letter-spacing:.6px;
+
+    /* ====== ENCABEZADO PEDIDO ====== */
+    .heroTitle{
       margin-bottom:12px;
+      line-height:1.02;
+    }
+    .heroTitle .brandWord{
+      font-family: "RegothicMedieval", system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      font-weight: 400;
+      letter-spacing: .8px;
+      display:block;
+      font-size: clamp(2.4rem, 7vw, 4.1rem);
+      color: var(--text);
+      text-transform:none;
       word-break: break-word;
     }
-    h1 span{color:var(--accent)}
+    .heroTitle .tagline{
+      display:block;
+      margin-top:8px;
+      font-size: clamp(1.55rem, 4.8vw, 2.25rem);
+      color: var(--accent);
+      letter-spacing: .25px;
+      line-height:1.08;
+    }
+
     .sub{
       color:var(--muted);
       font-size:1.06rem;
@@ -230,13 +252,7 @@ Pegá esta parte primero
       backdrop-filter: var(--blur);
       width:100%;
     }
-
-    .viewport{
-      overflow:hidden;
-      width:100%;
-      position:relative;
-    }
-
+    .viewport{overflow:hidden;width:100%;position:relative}
     .track{
       display:flex;
       transform: translateX(0);
@@ -244,22 +260,18 @@ Pegá esta parte primero
       touch-action: pan-y;
       user-select:none;
     }
-
     .slide{
       min-width: 100%;
       display:grid;
       grid-template-columns: 1.05fr .95fr;
       align-items:stretch;
     }
-
     .slideMedia{
       padding:18px;
       display:flex;
       align-items:center;
       justify-content:center;
     }
-
-    /* clave responsive: imagen nunca se sale del viewport */
     .slideMedia img{
       width: min(520px, 100%);
       height: auto;
@@ -270,7 +282,6 @@ Pegá esta parte primero
       box-shadow: 0 14px 40px rgba(0,0,0,.55);
       display:block;
     }
-
     .slideInfo{
       padding:22px;
       display:flex;
@@ -281,7 +292,6 @@ Pegá esta parte primero
     }
     .slideInfo h3{font-size:1.25rem;letter-spacing:.2px}
     .slideInfo p{color:var(--muted)}
-
     .pillRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
     .pill{
       font-size:.82rem;
@@ -392,7 +402,6 @@ Pegá esta parte primero
 
 <body>
 
-  <!-- NAV -->
   <div class="nav">
     <div class="wrap inner">
       <a class="brand" href="#inicio" aria-label="Simbolik Home">
@@ -415,16 +424,22 @@ Pegá esta parte primero
     </div>
   </div>
 
-  <!-- HERO -->
   <header id="inicio">
     <div class="wrap hero">
       <div class="heroCard reveal left">
         <div class="kicker"><span class="dot"></span> Diseños únicos en DTF • Envíos a todo el país</div>
-        <h1>Remeras con <span>identidad</span><br/>y símbolo</h1>
+
+        <!-- ENCABEZADO ACTUALIZADO -->
+        <div class="heroTitle">
+          <span class="brandWord">Simboli-k</span>
+          <span class="tagline">Remeras con identidad<br/>y símbolo</span>
+        </div>
+
         <p class="sub">
           Prendas que no son “una estampa más”: cada diseño tiene carácter, vibra y presencia.
           Ideal para regalar o para vestirte con algo que diga algo.
         </p>
+
         <div class="ctaRow">
           <a class="btn" href="#remeras">Ver ejemplos</a>
           <a class="ghost" href="#envios">Cómo se envía</a>
@@ -448,7 +463,6 @@ Pegá esta parte primero
     </div>
   </header>
 
-  <!-- SECTION: REMERAS (CARRUSEL AUTO + SWIPE) -->
   <section id="remeras">
     <div class="wrap">
       <h2 class="title reveal">Ejemplos de remeras</h2>
@@ -523,10 +537,8 @@ Pegá esta parte primero
 
   <!-- =========================
 PARTE 2/2 sigue abajo
-========================= -->
-<!-- =========================
+========================= --><!-- =========================
 PARTE 2/2 — index.html
-AUTO (INTERVALO) + SWIPE/DRAG + PAUSA EN INTERACCIÓN
 Pegá esta parte debajo de la PARTE 1
 ========================= -->
 
@@ -576,7 +588,6 @@ Pegá esta parte debajo de la PARTE 1
     Creado y diseñado por <a href="https://ciborg347.onrender.com" target="_blank" rel="noopener">Ciborg 347</a>
   </footer>
 
-  <!-- WhatsApp flotante (SVG, escala perfecto) -->
   <a class="whatsapp"
      href="https://wa.me/5491111111111?text=Hola!%20Quiero%20consultar%20por%20remeras%20Simbolik."
      target="_blank" rel="noopener" aria-label="WhatsApp">
@@ -620,15 +631,13 @@ Pegá esta parte debajo de la PARTE 1
       let i = 0;
       const total = slides.length;
 
-      const AUTO_MS = 3200;      // velocidad del auto-carrusel
-      const PAUSE_MS = 6000;     // cuánto pausa después de interacción
+      const AUTO_MS = 3200;
+      const PAUSE_MS = 6000;
       let timer = null;
       let pauseTimer = null;
 
-      // drag/swipe state
       let isDown = false;
       let startX = 0;
-      let currentX = 0;
       let deltaX = 0;
       let startTranslate = 0;
       let viewportW = 1;
@@ -685,10 +694,7 @@ Pegá esta parte debajo de la PARTE 1
         });
       });
 
-      // Helpers
       function getTranslateX(){
-        // track transform = translateX(-N%)
-        // para drag usamos px: convertimos a px desde índice actual
         viewportW = viewport.getBoundingClientRect().width || 1;
         return -i * viewportW;
       }
@@ -696,7 +702,6 @@ Pegá esta parte debajo de la PARTE 1
       function onDown(clientX){
         isDown = true;
         startX = clientX;
-        currentX = clientX;
         deltaX = 0;
 
         viewportW = viewport.getBoundingClientRect().width || 1;
@@ -708,10 +713,8 @@ Pegá esta parte debajo de la PARTE 1
 
       function onMove(clientX){
         if (!isDown) return;
-        currentX = clientX;
-        deltaX = currentX - startX;
+        deltaX = clientX - startX;
 
-        // resistencia en bordes
         const maxLeft = 0;
         const maxRight = -(total - 1) * viewportW;
         let next = startTranslate + deltaX;
@@ -726,7 +729,7 @@ Pegá esta parte debajo de la PARTE 1
         if (!isDown) return;
         isDown = false;
 
-        const threshold = Math.max(40, viewportW * 0.12); // swipe mínimo (px o %)
+        const threshold = Math.max(40, viewportW * 0.12);
         setTransition(true);
 
         if (deltaX > threshold) update(i - 1, true);
@@ -734,12 +737,10 @@ Pegá esta parte debajo de la PARTE 1
         else update(i, true);
       }
 
-      // Touch (dedo)
       viewport.addEventListener('touchstart', (e) => onDown(e.touches[0].clientX), {passive:true});
       viewport.addEventListener('touchmove', (e) => onMove(e.touches[0].clientX), {passive:true});
       viewport.addEventListener('touchend', onUp, {passive:true});
 
-      // Pointer (mouse/pen) para drag en desktop
       viewport.addEventListener('pointerdown', (e) => {
         if (e.pointerType === 'mouse') e.preventDefault();
         viewport.setPointerCapture(e.pointerId);
@@ -749,19 +750,15 @@ Pegá esta parte debajo de la PARTE 1
       viewport.addEventListener('pointerup', onUp);
       viewport.addEventListener('pointercancel', onUp);
 
-      // Pausar auto cuando la pestaña no está visible
       document.addEventListener('visibilitychange', () => {
         if (document.hidden) stopAuto();
         else startAuto();
       });
 
-      // Recalcular al cambiar tamaño (mantener slide alineado)
       window.addEventListener('resize', () => {
-        // fuerza al índice actual sin anim para no “saltar”
         update(i, false);
       });
 
-      // Init
       update(0, false);
       startAuto();
     })();
@@ -769,3 +766,4 @@ Pegá esta parte debajo de la PARTE 1
 
 </body>
 </html>
+
