--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- =========================
+PARTE 1/2 — index.html (MISMO CÓDIGO + ajuste WhatsApp para que NO quede pegado a la derecha en móviles)
+Pegá esta parte primero
+========================= -->
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -36,6 +40,9 @@
       --glass: rgba(0,0,0,.56);
       --stroke: rgba(255,255,255,.12);
       --blur: blur(14px);
+
+      /* ===== Ajuste WhatsApp: margen seguro para NO quedar pegado a la derecha ===== */
+      --wa-offset: 16px;
     }
 
     *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial}
@@ -235,7 +242,7 @@
       box-shadow: 0 0 16px rgba(212,179,107,.55);
     }
 
-    /* ====== ENCABEZADO: FUENTE + LOGO PRINCIPAL ====== */
+    /* ENCABEZADO: FUENTE + LOGO PRINCIPAL */
     .heroTitle{margin-bottom:12px;line-height:1.02}
     .brandRow{
       display:flex;
@@ -398,11 +405,14 @@
     }
     .carMeta{color:var(--muted);font-size:.9rem;white-space:nowrap}
 
-    /* WHATSAPP FLOAT (LOGO ORIGINAL + SIEMPRE DENTRO DE PANTALLA) */
+    /* =========================
+       WHATSAPP FLOAT
+       (MISMO DISEÑO + offset para que NO quede "pegado a la derecha")
+       ========================= */
     .whatsapp{
       position:fixed;
-      right: max(12px, env(safe-area-inset-right));
-      bottom: max(12px, env(safe-area-inset-bottom));
+      right: calc(var(--wa-offset) + env(safe-area-inset-right));
+      bottom: calc(var(--wa-offset) + env(safe-area-inset-bottom));
       width:64px;height:64px;
       border-radius:999px;
       background:#25d366;
@@ -436,6 +446,9 @@
       .slideMedia{padding:16px}
     }
     @media (max-width: 680px){
+      /* Más margen en celulares para que NO quede al borde */
+      :root{ --wa-offset: 18px; }
+
       .menu{display:none}
       .brand .t span{display:none}
       .btn{padding:10px 14px}
@@ -446,12 +459,19 @@
       .brandRow{gap:10px}
     }
     @media (max-width: 420px){
+      /* Todavía más margen en pantallas muy chicas */
+      :root{ --wa-offset: 20px; }
+
       .wrap{padding:0 16px}
       .carMeta{display:none}
       .heroCard,.mini,.carousel{border-radius:16px}
       .slideMedia img{border-radius:14px}
       .heroLogo{border-radius:14px}
     }
+    @media (max-width: 360px){
+      :root{ --wa-offset: 22px; }
+    }
+
     @media (prefers-reduced-motion: reduce){
       .reveal{transition:none}
       .track{transition:none}
@@ -599,7 +619,8 @@
 
   <!-- =========================
 PARTE 2/2 sigue abajo
-========================= --><!-- =========================
+========================= -->
+<!-- =========================
 PARTE 2/2 — index.html
 Pegá esta parte debajo de la PARTE 1
 ========================= -->
@@ -655,7 +676,6 @@ Pegá esta parte debajo de la PARTE 1
      href="https://wa.me/5491111111111?text=Hola!%20Quiero%20consultar%20por%20remeras%20Simbolik."
      target="_blank" rel="noopener" aria-label="WhatsApp">
     <span class="sr-only">WhatsApp</span>
-    <!-- Logo WhatsApp (glyph clásico) -->
     <svg viewBox="0 0 32 32" aria-hidden="true" focusable="false">
       <path d="M19.11 17.2c-.27-.14-1.6-.79-1.84-.88-.25-.09-.43-.14-.61.14-.18.27-.7.88-.86 1.06-.16.18-.32.2-.59.07-.27-.14-1.15-.42-2.19-1.34-.81-.72-1.36-1.6-1.52-1.87-.16-.27-.02-.42.12-.55.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.61-1.48-.84-2.03-.22-.53-.45-.46-.61-.47h-.52c-.18 0-.48.07-.73.34-.25.27-.96.94-.96 2.29s.98 2.65 1.12 2.84c.14.18 1.93 2.95 4.67 4.13.65.28 1.16.44 1.56.56.65.21 1.24.18 1.71.11.52-.08 1.6-.65 1.82-1.28.22-.63.22-1.17.16-1.28-.07-.11-.25-.18-.52-.32zM16 3C8.83 3 3 8.83 3 16c0 2.2.58 4.35 1.68 6.25L3.5 28.5l6.42-1.12A12.9 12.9 0 0 0 16 29c7.17 0 13-5.83 13-13S23.17 3 16 3zm0 23.5c-2.02 0-3.98-.54-5.67-1.56l-.41-.24-3.81.66.66-3.72-.27-.43A10.96 10.96 0 0 1 5.5 16C5.5 10.2 10.2 5.5 16 5.5S26.5 10.2 26.5 16 21.8 26.5 16 26.5z"/>
     </svg>
