--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- =========================
+PARTE 1/2 — index.html
+MISMO CÓDIGO + FIX NAV CTA:
+- El botón "Pedir por WhatsApp" queda CENTRADO en el header (nav)
+- No queda pegado al borde / no lo tapa el borde en móviles
+Pegá esta parte primero
+========================= -->
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -16,10 +23,6 @@
   <meta name="theme-color" content="#0f0f0f"/>
 
   <style>
-    /* =========================
-       TIPOGRAFÍA (LOCAL)
-       Poné el archivo "Regothic Medieval.ttf" en la MISMA carpeta que este index.html
-       ========================= */
     @font-face{
       font-family: "RegothicMedieval";
       src: url("Regothic Medieval.ttf") format("truetype");
@@ -37,24 +40,18 @@
       --stroke: rgba(255,255,255,.12);
       --blur: blur(14px);
       --wa-offset: 16px;
+
+      /* FIX: padding seguro para que nada quede tapado por el borde (safe area) */
+      --safe-x: max(16px, env(safe-area-inset-left));
+      --safe-x-r: max(16px, env(safe-area-inset-right));
     }
 
-    /* ===== FIX CENTRADO / OVERFLOW =====
-       - Evita que algo empuje el layout a la derecha
-       - Asegura ancho correcto en móviles
-    */
     html, body{
       width:100%;
       max-width:100%;
       overflow-x:hidden;
     }
-    body{
-      position:relative;
-    }
-    img, svg{
-      max-width:100%;
-      height:auto;
-    }
+    img, svg{max-width:100%;height:auto}
 
     *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial}
     html{scroll-behavior:smooth}
@@ -81,12 +78,12 @@
     .wrap{
       max-width:var(--max);
       margin:0 auto;
-      padding:0 20px;
+      padding-left: var(--safe-x);
+      padding-right: var(--safe-x-r);
       width:100%;
     }
     .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}
 
-    /* ====== FUENTE PARA TODAS LAS APARICIONES DE "Simbolik" ====== */
     .brandName,
     .brandWord{
       font-family: "RegothicMedieval", system-ui, -apple-system, Segoe UI, Roboto, Arial !important;
@@ -94,7 +91,6 @@
       letter-spacing: .8px;
     }
 
-    /* ====== PULSO NEÓN MULTICOLOR (LOGOS) ====== */
     @keyframes neonPulse {
       0%{
         box-shadow:
@@ -140,15 +136,18 @@
       width:100%;
     }
     .nav .inner{
-      display:flex;align-items:center;justify-content:space-between;
+      display:grid;               /* FIX: grid para centrar el CTA */
+      grid-template-columns: 1fr auto 1fr;
+      align-items:center;
       padding:12px 0;
       gap:12px;
-      min-width:0; /* FIX: evita empujes laterales */
+      min-width:0;
     }
+
     .brand{
       display:flex;align-items:center;gap:12px;text-decoration:none;
       min-width: 190px;
-      flex: 0 0 auto;
+      justify-self:start;
     }
     .brand .logo{
       width:44px;height:44px;border-radius:12px;
@@ -164,8 +163,8 @@
 
     .menu{
       display:flex;gap:10px;align-items:center;flex-wrap:wrap;justify-content:center;
-      flex: 1 1 auto;
       min-width: 0;
+      justify-self:end;
     }
     .menu a{
       text-decoration:none;
@@ -190,10 +189,14 @@
       border:1px solid rgba(255,255,255,.18);
       transition:.2s;
       white-space:nowrap;
-      flex: 0 0 auto;
       max-width:100%;
     }
     .btn:hover{transform:translateY(-1px);filter:saturate(1.05)}
+
+    .navCta{
+      justify-self:center;        /* FIX: CTA centrado */
+      max-width: min(360px, 100%);
+    }
 
     .ghost{
       display:inline-flex;align-items:center;justify-content:center;
@@ -208,7 +211,6 @@
     }
     .ghost:hover{background:rgba(255,255,255,.07);transform:translateY(-1px)}
 
-    /* HERO */
     header{
       min-height: calc(100vh - 68px);
       display:flex;align-items:center;
@@ -221,7 +223,7 @@
       gap:18px;
       align-items:center;
       width:100%;
-      min-width:0; /* FIX */
+      min-width:0;
     }
     .heroCard{
       background: var(--glass);
@@ -232,7 +234,7 @@
       backdrop-filter: var(--blur);
       position:relative;
       overflow:hidden;
-      min-width:0; /* FIX */
+      min-width:0;
     }
     .heroCard:before{
       content:"";
@@ -264,14 +266,9 @@
       flex:0 0 auto;
     }
 
-    /* ENCABEZADO: FUENTE + LOGO PRINCIPAL */
     .heroTitle{margin-bottom:12px;line-height:1.02}
     .brandRow{
-      display:flex;
-      align-items:center;
-      gap:12px;
-      flex-wrap:wrap;
-      min-width:0;
+      display:flex;align-items:center;gap:12px;flex-wrap:wrap;min-width:0;
     }
     .heroLogo{
       width: clamp(42px, 7vw, 64px);
@@ -321,17 +318,14 @@
     .mini b{display:block;margin-bottom:6px}
     .mini p{color:var(--muted);font-size:.95rem}
 
-    /* SECTIONS */
     section{padding:68px 0;width:100%}
     .title{text-align:center;font-size:clamp(1.65rem,4.4vw,2.1rem);margin-bottom:12px}
     .lead{text-align:center;color:var(--muted);max-width:74ch;margin:0 auto 28px}
 
-    /* REVEAL */
     .reveal{opacity:0;transform:translateX(70px);filter:blur(6px);transition:opacity .65s ease,transform .65s ease,filter .65s ease}
     .reveal.left{transform:translateX(-70px)}
     .reveal.in{opacity:1;transform:translateX(0);filter:blur(0)}
 
-    /* CARRUSEL */
     .carousel{
       background: rgba(0,0,0,.52);
       border:1px solid rgba(255,255,255,.12);
@@ -358,13 +352,7 @@
       align-items:stretch;
       min-width:100%;
     }
-    .slideMedia{
-      padding:18px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      min-width:0;
-    }
+    .slideMedia{padding:18px;display:flex;align-items:center;justify-content:center;min-width:0}
     .slideMedia img{
       width: min(520px, 100%);
       height: auto;
@@ -382,7 +370,7 @@
       justify-content:center;
       gap:10px;
       min-width: 0;
-      overflow-wrap:anywhere; /* FIX: no empuja al costado */
+      overflow-wrap:anywhere;
     }
     .slideInfo h3{font-size:1.25rem;letter-spacing:.2px}
     .slideInfo p{color:var(--muted)}
@@ -398,19 +386,14 @@
     }
 
     .carControls{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:12px;
-      padding:14px 16px;
+      display:flex;align-items:center;justify-content:space-between;
+      gap:12px;padding:14px 16px;
       border-top:1px solid rgba(255,255,255,.10);
       background: rgba(0,0,0,.35);
-      width:100%;
-      max-width:100%;
+      width:100%;max-width:100%;
     }
     .carBtn{
-      width:44px;height:44px;
-      border-radius:14px;
+      width:44px;height:44px;border-radius:14px;
       border:1px solid rgba(255,255,255,.12);
       background: rgba(255,255,255,.05);
       color:var(--text);
@@ -439,13 +422,11 @@
     }
     .carMeta{color:var(--muted);font-size:.9rem;white-space:nowrap;flex:0 0 auto}
 
-    /* WHATSAPP FLOAT */
     .whatsapp{
       position:fixed;
       right: calc(var(--wa-offset) + env(safe-area-inset-right));
       bottom: calc(var(--wa-offset) + env(safe-area-inset-bottom));
-      width:64px;height:64px;
-      border-radius:999px;
+      width:64px;height:64px;border-radius:999px;
       background:#25d366;
       display:flex;align-items:center;justify-content:center;
       box-shadow: 0 18px 44px rgba(0,0,0,.55);
@@ -458,7 +439,6 @@
     .whatsapp:active{transform:translateY(0)}
     .whatsapp svg{width:30px;height:30px;display:block;fill:#fff}
 
-    /* FOOTER */
     footer{
       border-top:1px solid rgba(255,255,255,.08);
       padding:34px 0 46px;
@@ -469,7 +449,6 @@
     }
     footer a{color:var(--accent);text-decoration:none}
 
-    /* RESPONSIVE */
     @media (max-width: 980px){
       header{min-height:auto;padding:40px 0 18px}
       .hero{grid-template-columns:1fr}
@@ -477,10 +456,22 @@
       .slideInfo{padding:18px}
       .slideMedia{padding:16px}
     }
+
     @media (max-width: 680px){
       :root{ --wa-offset: 18px; }
+
+      /* NAV en móviles: CTA centrado y menú oculto (ya estaba) */
       .menu{display:none}
       .brand .t span{display:none}
+
+      .nav .inner{
+        grid-template-columns: 1fr auto;  /* brand | CTA */
+      }
+      .navCta{
+        justify-self:end;               /* en mobile queda alineado y con padding seguro */
+        max-width: 100%;
+      }
+
       .btn{padding:10px 14px}
       .heroCard{padding:22px}
       .whatsapp{width:58px;height:58px}
@@ -488,17 +479,29 @@
       .carBtn{width:42px;height:42px}
       .brandRow{gap:10px}
     }
+
     @media (max-width: 420px){
       :root{ --wa-offset: 20px; }
-      .wrap{padding:0 16px}
+      .wrap{padding-left: var(--safe-x); padding-right: var(--safe-x-r);}
       .carMeta{display:none}
       .heroCard,.mini,.carousel{border-radius:16px}
       .slideMedia img{border-radius:14px}
       .heroLogo{border-radius:14px}
+
+      /* CTA: que no toque bordes en pantallas muy chicas */
+      .navCta .btn{
+        padding:10px 12px;
+      }
     }
+
     @media (max-width: 360px){
       :root{ --wa-offset: 22px; }
+      .navCta .btn{
+        font-size:.92rem;
+        padding:10px 10px;
+      }
     }
+
     @media (prefers-reduced-motion: reduce){
       .reveal{transition:none}
       .track{transition:none}
@@ -521,13 +524,14 @@
         </div>
       </a>
 
+      <!-- CTA NAV CENTRADO (desktop) / bien acomodado (mobile) -->
+      <a class="btn navCta" href="#contacto" aria-label="Ir a contacto">Pedir por WhatsApp</a>
+
       <nav class="menu" aria-label="Secciones">
         <a href="#remeras">Remeras</a>
         <a href="#envios">Envíos</a>
         <a href="#contacto">Contacto</a>
       </nav>
-
-      <a class="btn" href="#contacto" aria-label="Ir a contacto">Pedir por WhatsApp</a>
     </div>
   </div>
 
@@ -646,7 +650,8 @@
 
   <!-- =========================
 PARTE 2/2 sigue abajo
-========================= --><!-- =========================
+========================= -->
+<!-- =========================
 PARTE 2/2 — index.html
 Pegá esta parte debajo de la PARTE 1
 ========================= -->
@@ -697,7 +702,6 @@ Pegá esta parte debajo de la PARTE 1
     Creado y diseñado por <a href="https://ciborg347.onrender.com" target="_blank" rel="noopener">Ciborg 347</a>
   </footer>
 
-  <!-- WhatsApp flotante (LOGO ORIGINAL) -->
   <a class="whatsapp"
      href="https://wa.me/5491111111111?text=Hola!%20Quiero%20consultar%20por%20remeras%20Simbolik."
      target="_blank" rel="noopener" aria-label="WhatsApp">
@@ -708,7 +712,6 @@ Pegá esta parte debajo de la PARTE 1
   </a>
 
   <script>
-    // Reveal desde laterales al scrollear
     (function(){
       const els = Array.from(document.querySelectorAll('.reveal'));
       if (!('IntersectionObserver' in window) || els.length === 0){
@@ -726,7 +729,6 @@ Pegá esta parte debajo de la PARTE 1
       els.forEach(el => io.observe(el));
     })();
 
-    // Carrusel: AUTO + swipe/drag + pausa en interacción + resume
     (function(){
       const viewport = document.getElementById('viewport');
       const track = document.getElementById('track');
@@ -876,4 +878,3 @@ Pegá esta parte debajo de la PARTE 1
 
 </body>
 </html>
-
