--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!-- =========================
+PARTE 1/2 — index.html
+MISMO CÓDIGO + FIX NAV CTA:
+- El botón "Pedir por WhatsApp" queda MÁS A LA IZQUIERDA (no pegado a la derecha)
+- En desktop queda en la columna del medio pero alineado a la izquierda (con margen)
+- En mobile queda abajo del header (centrado), así nunca queda al borde
+Pegá esta parte primero
+========================= -->
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
@@ -34,20 +42,18 @@
       --blur: blur(14px);
       --wa-offset: 16px;
 
-      /* FIX: padding seguro para que nada quede tapado por el borde (safe area) */
       --safe-x: max(16px, env(safe-area-inset-left));
       --safe-x-r: max(16px, env(safe-area-inset-right));
+
+      /* >>> FIX BOTON NAV: empujarlo un toque a la IZQUIERDA <<< */
+      --cta-shift-left: 56px;
     }
 
-    html, body{
-      width:100%;
-      max-width:100%;
-      overflow-x:hidden;
-    }
+    html, body{width:100%;max-width:100%;overflow-x:hidden}
     img, svg{max-width:100%;height:auto}
-
     *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial}
     html{scroll-behavior:smooth}
+
     body{
       background:
         linear-gradient(180deg, rgba(0,0,0,.78), rgba(0,0,0,.92)),
@@ -77,8 +83,7 @@
     }
     .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);border:0}
 
-    .brandName,
-    .brandWord{
+    .brandName,.brandWord{
       font-family: "RegothicMedieval", system-ui, -apple-system, Segoe UI, Roboto, Arial !important;
       font-weight: 400;
       letter-spacing: .8px;
@@ -118,7 +123,7 @@
         filter: saturate(1.05);
       }
     }
-    .neonLogo{ animation: neonPulse 2.3s ease-in-out infinite; }
+    .neonLogo{animation: neonPulse 2.3s ease-in-out infinite}
 
     /* NAV */
     .nav{
@@ -129,7 +134,7 @@
       width:100%;
     }
     .nav .inner{
-      display:grid;               /* FIX: grid para centrar el CTA */
+      display:grid;
       grid-template-columns: 1fr auto 1fr;
       align-items:center;
       padding:12px 0;
@@ -186,8 +191,10 @@
     }
     .btn:hover{transform:translateY(-1px);filter:saturate(1.05)}
 
+    /* >>> ACA ESTA EL CAMBIO <<< */
     .navCta{
-      justify-self:center;        /* FIX: CTA centrado */
+      justify-self:center;                 /* sigue en el medio */
+      transform: translateX(calc(var(--cta-shift-left) * -1)); /* lo corre a la IZQUIERDA */
       max-width: min(360px, 100%);
     }
 
@@ -260,9 +267,7 @@
     }
 
     .heroTitle{margin-bottom:12px;line-height:1.02}
-    .brandRow{
-      display:flex;align-items:center;gap:12px;flex-wrap:wrap;min-width:0;
-    }
+    .brandRow{display:flex;align-items:center;gap:12px;flex-wrap:wrap;min-width:0}
     .heroLogo{
       width: clamp(42px, 7vw, 64px);
       height: clamp(42px, 7vw, 64px);
@@ -290,12 +295,7 @@
       font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial;
     }
 
-    .sub{
-      color:var(--muted);
-      font-size:1.06rem;
-      max-width: 56ch;
-      margin-bottom:18px;
-    }
+    .sub{color:var(--muted);font-size:1.06rem;max-width:56ch;margin-bottom:18px}
     .ctaRow{display:flex;gap:12px;flex-wrap:wrap;max-width:100%}
 
     .heroSide{display:grid;gap:12px;width:100%;min-width:0}
@@ -330,90 +330,33 @@
       max-width:100%;
     }
     .viewport{overflow:hidden;width:100%;position:relative}
-    .track{
-      display:flex;
-      transform: translateX(0);
-      will-change: transform;
-      touch-action: pan-y;
-      user-select:none;
-      max-width:100%;
-    }
-    .slide{
-      min-width: 100%;
-      display:grid;
-      grid-template-columns: 1.05fr .95fr;
-      align-items:stretch;
-      min-width:100%;
-    }
+    .track{display:flex;will-change:transform;touch-action:pan-y;user-select:none;max-width:100%}
+    .slide{min-width:100%;display:grid;grid-template-columns:1.05fr .95fr;align-items:stretch}
     .slideMedia{padding:18px;display:flex;align-items:center;justify-content:center;min-width:0}
     .slideMedia img{
       width: min(520px, 100%);
-      height: auto;
-      aspect-ratio: 4 / 5;
-      object-fit: cover;
-      border-radius: 16px;
+      height:auto;
+      aspect-ratio:4/5;
+      object-fit:cover;
+      border-radius:16px;
       border:1px solid rgba(255,255,255,.10);
       box-shadow: 0 14px 40px rgba(0,0,0,.55);
       display:block;
     }
-    .slideInfo{
-      padding:22px;
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-      gap:10px;
-      min-width: 0;
-      overflow-wrap:anywhere;
-    }
+    .slideInfo{padding:22px;display:flex;flex-direction:column;justify-content:center;gap:10px;min-width:0;overflow-wrap:anywhere}
     .slideInfo h3{font-size:1.25rem;letter-spacing:.2px}
     .slideInfo p{color:var(--muted)}
     .pillRow{display:flex;gap:10px;flex-wrap:wrap;margin-top:6px}
-    .pill{
-      font-size:.82rem;
-      color:rgba(255,255,255,.86);
-      padding:7px 10px;
-      border-radius:999px;
-      background: rgba(255,255,255,.05);
-      border:1px solid rgba(255,255,255,.10);
-      white-space:nowrap;
-    }
+    .pill{font-size:.82rem;color:rgba(255,255,255,.86);padding:7px 10px;border-radius:999px;background:rgba(255,255,255,.05);border:1px solid rgba(255,255,255,.10);white-space:nowrap}
 
-    .carControls{
-      display:flex;align-items:center;justify-content:space-between;
-      gap:12px;padding:14px 16px;
-      border-top:1px solid rgba(255,255,255,.10);
-      background: rgba(0,0,0,.35);
-      width:100%;max-width:100%;
-    }
-    .carBtn{
-      width:44px;height:44px;border-radius:14px;
-      border:1px solid rgba(255,255,255,.12);
-      background: rgba(255,255,255,.05);
-      color:var(--text);
-      cursor:pointer;
-      display:inline-flex;align-items:center;justify-content:center;
-      transition:.2s;
-      touch-action: manipulation;
-      flex:0 0 auto;
-    }
+    .carControls{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:14px 16px;border-top:1px solid rgba(255,255,255,.10);background: rgba(0,0,0,.35)}
+    .carBtn{width:44px;height:44px;border-radius:14px;border:1px solid rgba(255,255,255,.12);background:rgba(255,255,255,.05);color:var(--text);cursor:pointer;display:inline-flex;align-items:center;justify-content:center;transition:.2s;touch-action:manipulation}
     .carBtn:hover{background:rgba(255,255,255,.08);transform:translateY(-1px)}
     .carBtn:active{transform:translateY(0)}
     .dots{display:flex;gap:8px;align-items:center;justify-content:center;flex:1;min-width:0}
-    .dotBtn{
-      width:9px;height:9px;border-radius:999px;
-      border:1px solid rgba(255,255,255,.25);
-      background: rgba(255,255,255,.10);
-      cursor:pointer;
-      transition:.2s;
-      flex:0 0 auto;
-    }
-    .dotBtn.active{
-      background: var(--accent);
-      border-color: rgba(212,179,107,.85);
-      box-shadow: 0 0 16px rgba(212,179,107,.45);
-      transform: scale(1.08);
-    }
-    .carMeta{color:var(--muted);font-size:.9rem;white-space:nowrap;flex:0 0 auto}
+    .dotBtn{width:9px;height:9px;border-radius:999px;border:1px solid rgba(255,255,255,.25);background:rgba(255,255,255,.10);cursor:pointer;transition:.2s}
+    .dotBtn.active{background:var(--accent);border-color:rgba(212,179,107,.85);box-shadow:0 0 16px rgba(212,179,107,.45);transform:scale(1.08)}
+    .carMeta{color:var(--muted);font-size:.9rem;white-space:nowrap}
 
     .whatsapp{
       position:fixed;
@@ -432,14 +375,7 @@
     .whatsapp:active{transform:translateY(0)}
     .whatsapp svg{width:30px;height:30px;display:block;fill:#fff}
 
-    footer{
-      border-top:1px solid rgba(255,255,255,.08);
-      padding:34px 0 46px;
-      color:var(--muted);
-      text-align:center;
-      font-size:.92rem;
-      width:100%;
-    }
+    footer{border-top:1px solid rgba(255,255,255,.08);padding:34px 0 46px;color:var(--muted);text-align:center;font-size:.92rem}
     footer a{color:var(--accent);text-decoration:none}
 
     @media (max-width: 980px){
@@ -450,19 +386,29 @@
       .slideMedia{padding:16px}
     }
 
+    /* MOBILE: CTA NO queda a la derecha, lo pongo centrado debajo del header */
     @media (max-width: 680px){
-      :root{ --wa-offset: 18px; }
+      :root{ --wa-offset: 18px; --cta-shift-left: 0px; }
 
-      /* NAV en móviles: CTA centrado y menú oculto (ya estaba) */
       .menu{display:none}
       .brand .t span{display:none}
 
       .nav .inner{
-        grid-template-columns: 1fr auto;  /* brand | CTA */
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        justify-items: center;
+        row-gap: 10px;
       }
+      .brand{justify-self:center;min-width:0}
       .navCta{
-        justify-self:end;               /* en mobile queda alineado y con padding seguro */
-        max-width: 100%;
+        justify-self:center;
+        transform:none;
+        width: 100%;
+        max-width: 360px;
+      }
+      .navCta.btn{
+        width: 100%;
+        justify-content:center;
       }
 
       .btn{padding:10px 14px}
@@ -475,24 +421,7 @@
 
     @media (max-width: 420px){
       :root{ --wa-offset: 20px; }
-      .wrap{padding-left: var(--safe-x); padding-right: var(--safe-x-r);}
       .carMeta{display:none}
-      .heroCard,.mini,.carousel{border-radius:16px}
-      .slideMedia img{border-radius:14px}
-      .heroLogo{border-radius:14px}
-
-      /* CTA: que no toque bordes en pantallas muy chicas */
-      .navCta .btn{
-        padding:10px 12px;
-      }
-    }
-
-    @media (max-width: 360px){
-      :root{ --wa-offset: 22px; }
-      .navCta .btn{
-        font-size:.92rem;
-        padding:10px 10px;
-      }
     }
 
     @media (prefers-reduced-motion: reduce){
@@ -517,7 +446,7 @@
         </div>
       </a>
 
-      <!-- CTA NAV CENTRADO (desktop) / bien acomodado (mobile) -->
+      <!-- CTA NAV (más a la izquierda en desktop) -->
       <a class="btn navCta" href="#contacto" aria-label="Ir a contacto">Pedir por WhatsApp</a>
 
       <nav class="menu" aria-label="Secciones">
