--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ Pegá esta parte primero
         <div class="heroTitle">
           <div class="brandRow">
             <img class="heroLogo neonLogo" src="https://iili.io/ftT64Yx.jpg" alt="Logo principal Simbolik">
-            <span class="brandWord">Simboli-k</span>
+            <span class="brandWord">Simbolik</span>
           </div>
           <span class="tagline">Remeras con identidad<br/>y símbolo</span>
         </div>
