Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Pegá esta parte primero
   <meta property="og:title" content="Simbolik — Remeras con vida propia" />
   <meta property="og:description" content="Diseños únicos en DTF. Envíos a todo el país." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://iili.io/ftTgQQn.jpg" />
+  <meta property="og:image" content="https://iili.io/ftT64Yx.jpg" />
   <meta property="og:url" content="#" />
   <meta name="theme-color" content="#0f0f0f"/>
 
